Agregar el tarara

--- a/try.html
+++ b/try.html
@@ -12,6 +12,9 @@
                 <p>
                     Y este es el parrafo de inicio
                 </p>
+                <p>
+                    Los blogs de tarara tara tarara
+                </p>
             </div>
         </div>
 
