Modifique la cabecera y el color del texto

--- a/try.html
+++ b/try.html
@@ -7,7 +7,7 @@
         <div id = "container">
             <div id = "cabecera">
                 hyperblog
-                <span id = "cabecera">Tu blog de confianza</span>
+                <span id = "cabecera">Tu blog de cabcera</span>
             </div>
             <div id = "post">
                 <h1>
