--- a/try.html
+++ b/try.html
@@ -7,7 +7,7 @@
         <div id = "container">
             <div id = "cabecera">
                 hyperblog
-                <span id = "cabecera">Tu blog de confianza</span>
+                <span id = "cabecera">Tu blog de maestro</span>
             </div>
             <div id = "post">
                 <h1>
@@ -18,6 +18,9 @@
                 </p>
                 <p>
                     Los blogs de tarara tara tarara
+                </p>
+                <p>
+                    Suscribete y dale like
                 </p>
             </div>
         </div>
